Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Documentation]
  - Add note about the lack of logging.

v0.1.1    2023-06-08 09:17:58+01:00 Europe/London
  [Documentation]
  - Documented the Perl version support policy.

  [Toolchain]
  - Sign the distribution.

v0.1.0    2023-06-07 20:44:05+01:00 Europe/London
  - Initial release.