@@ -2,10 +2,12 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Catalyst" => "5";
+requires "File::Spec" => "0";
 requires "File::stat" => "0";
-requires "IO::File::WithPath" => "0";
+requires "IO::File" => "0";
 requires "Moose::Role" => "0";
 requires "Plack::MIME" => "0";
+requires "Plack::Util" => "0";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.14.0";
 
